bad/assign_new_array_string_null.example_compiler_output
ERROR
[1mbad/assign_new_array_string_null.lat:4:16: [1;31merror: [0;1mleft side is not assignable[m
	new string[3] = null;
	              [1;32m^[m
[1mbad/assign_new_array_string_null.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	new string[3] = null;
	[1;32m^[m
